--- a/index.html
+++ b/index.html
@@ -243,8 +243,26 @@
             </main>
         </div>
     </div>
-
-
+    <script id="template-article-link" type="text/x-handlebars-template">
+      <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
+    </script>
+    <script id="template-tag-link" type="text/x-handlebars-template">
+      <li><a href="#tag-{{ id }}"><span>{{ tagName }}</span></a></li>
+    </script>
+    <script id="template-author-link" type="text/x-handlebars-template">
+      <a href="#auth-{{ id }}"><span>{{ authorName }}</span></a>
+    </script>
+    <script id="template-tag-cloud-link" type="text/x-handlebars-template">
+        {{#each tags}}
+        <li><a class="{{ className }}" href="#tag-{{ tag }}"><span>{{ tag }}</span></a></li>
+        {{/each}}
+    </script>
+    <script id="template-author-cloud-link" type="text/x-handlebars-template">
+      {{#each authors}}
+      <li><a class="{{ authClassName }}" href="#auth-{{ authName }}"><span>{{ authString }}</span></a></li>
+      {{/each}}
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
